--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 .App-logo {
   height: 40vmin;
@@ -39,4 +39,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.montCap {
+  font-family: Montserrat;
+  text-transform: uppercase;
+}
+
+.word {
+  max-width: 10vw;
 }
